@@ -61,43 +61,58 @@ static const cl_object ecl_aet_to_ffi_table[aet_bc+1] = {
 	@':char' /* aet_bc */
 };
 
-static const cl_object ecl_foreign_type_table[] = {
-	@':char',
-	@':unsigned-char',
-	@':byte',
-	@':unsigned-byte',
-	@':short',
-	@':unsigned-short',
-	@':int',
-	@':unsigned-int',
-	@':long',
-	@':unsigned-long',
+#define ALIGNMENT(type) \
+        (long)(((struct { char a; type b[1]; } *)0)->b)
+#define FFI_DESC(symbol,type) \
+        {symbol, sizeof(type), ALIGNMENT(type)}
+
+static const struct{
+        cl_object name;
+        cl_index size;
+        cl_index alignment;
+} ecl_foreign_type_table[] = {
+	FFI_DESC(@':char', char),
+	FFI_DESC(@':unsigned-char', unsigned char),
+	FFI_DESC(@':byte', ecl_int8_t),
+        FFI_DESC(@':unsigned-byte', ecl_uint8_t),
+	FFI_DESC(@':short', short),
+	FFI_DESC(@':unsigned-short', unsigned short),
+	FFI_DESC(@':int', int),
+	FFI_DESC(@':unsigned-int', unsigned int),
+	FFI_DESC(@':long', long),
+	FFI_DESC(@':unsigned-long', unsigned long),
 #ifdef ecl_uint8_t
-        @':int8-t',
-        @':uint8-t',
+        FFI_DESC(@':int8-t', ecl_int8_t),
+        FFI_DESC(@':uint8-t', ecl_uint8_t),
 #endif
 #ifdef ecl_uint16_t
-        @':int16-t',
-        @':uint16-t',
+        FFI_DESC(@':int16-t', ecl_int16_t),
+        FFI_DESC(@':uint16-t', ecl_uint16_t),
 #endif
 #ifdef ecl_uint32_t
-        @':int32-t',
-        @':uint32-t',
+        FFI_DESC(@':int32-t', ecl_int32_t),
+        FFI_DESC(@':uint32-t', ecl_uint32_t),
 #endif
 #ifdef ecl_uint64_t
-        @':int64-t',
-        @':uint64-t',
+        FFI_DESC(@':int64-t', ecl_int64_t),
+        FFI_DESC(@':uint64-t', ecl_uint64_t),
 #endif
 #ifdef ecl_long_long_t
-        @':long-long',
-        @':unsigned-long-long',
+        FFI_DESC(@':long-long', long long),
+        FFI_DESC(@':unsigned-long-long', unsigned long long),
 #endif
-	@':pointer-void',
-	@':cstring',
-	@':object',
-	@':float',
-	@':double',
-	@':void'
+	FFI_DESC(@':pointer-void', void *),
+	FFI_DESC(@':cstring', char *),
+	FFI_DESC(@':object', cl_object),
+	FFI_DESC(@':float', float),
+	FFI_DESC(@':double', double),
+	{@':void', 0, 0}
+};
+
+static const int foreign_type_alignment[] = {
+        ALIGNMENT(char),
+        ALIGNMENT(unsigned char),
+        ALIGNMENT(int)
 };
 
 #ifdef ECL_DYNAMIC_FFI
@@ -106,45 +121,6 @@ static const cl_object ecl_foreign_cc_table[] = {
 	@':stdcall'
 };
 #endif
-
-static unsigned int ecl_foreign_type_size[] = {
-	sizeof(char),
-	sizeof(unsigned char),
-	sizeof(int8_t),
-	sizeof(uint8_t),
-	sizeof(short),
-	sizeof(unsigned short),
-	sizeof(int),
-	sizeof(unsigned int),
-	sizeof(long),
-	sizeof(unsigned long),
-#ifdef ecl_uint8_t
-        sizeof(ecl_int8_t),
-        sizeof(ecl_uint8_t),
-#endif
-#ifdef ecl_uint16_t
-        sizeof(ecl_int16_t),
-        sizeof(ecl_uint16_t),
-#endif
-#ifdef ecl_uint32_t
-        sizeof(ecl_int32_t),
-        sizeof(ecl_uint32_t),
-#endif
-#ifdef ecl_uint64_t
-        sizeof(ecl_int64_t),
-        sizeof(ecl_uint64_t),
-#endif
-#ifdef ecl_long_long_t
-        sizeof(long long),
-        sizeof(unsigned long long),
-#endif
-	sizeof(void *),
-	sizeof(char *),
-	sizeof(cl_object),
-	sizeof(float),
-	sizeof(double),
-	0
-};
 
 #ifdef HAVE_LIBFFI
 static struct {
@@ -416,7 +392,7 @@ foreign_type_code(cl_object type)
 {
 	int i;
 	for (i = 0; i <= ECL_FFI_VOID; i++) {
-		if (type == ecl_foreign_type_table[i])
+		if (type == ecl_foreign_type_table[i].name)
 			return i;
 	}
         return -1;
@@ -629,7 +605,8 @@ si_foreign_data_ref_elt(cl_object f, cl_object andx, cl_object type)
 	cl_index ndx = fixnnint(andx);
 	cl_index limit = f->foreign.size;
 	enum ecl_ffi_tag tag = ecl_foreign_type_code(type);
-	if (ecl_unlikely(ndx >= limit || (ndx + ecl_foreign_type_size[tag] > limit))) {
+	if (ecl_unlikely(ndx >= limit ||
+                         (ndx + ecl_foreign_type_table[tag].size > limit))) {
 		FEerror("Out of bounds reference into foreign data type ~A.", 1, f);
 	}
 	if (ecl_unlikely(type_of(f) != t_foreign)) {
@@ -645,7 +622,8 @@ si_foreign_data_set_elt(cl_object f, cl_object andx, cl_object type, cl_object v
 	cl_index ndx = fixnnint(andx);
 	cl_index limit = f->foreign.size;
 	enum ecl_ffi_tag tag = ecl_foreign_type_code(type);
-	if (ecl_unlikely(ndx >= limit || ndx + ecl_foreign_type_size[tag] > limit)) {
+	if (ecl_unlikely(ndx >= limit ||
+                         ndx + ecl_foreign_type_table[tag].size > limit)) {
 		FEerror("Out of bounds reference into foreign data type ~A.", 1, f);
 	}
 	if (ecl_unlikely(type_of(f) != t_foreign)) {
@@ -660,7 +638,14 @@ cl_object
 si_size_of_foreign_elt_type(cl_object type)
 {
 	enum ecl_ffi_tag tag = ecl_foreign_type_code(type);
-	@(return MAKE_FIXNUM(ecl_foreign_type_size[tag]))
+	@(return MAKE_FIXNUM(ecl_foreign_type_table[tag].size))
+}
+
+cl_object
+si_alignment_of_foreign_elt_type(cl_object type)
+{
+	enum ecl_ffi_tag tag = ecl_foreign_type_code(type);
+	@(return MAKE_FIXNUM(ecl_foreign_type_table[tag].alignment))
 }
 
 cl_object
