@@ -87,14 +87,15 @@
     (unless type
       (error "Incomplete or unknown foreign type ~A" name))
     (cond ((symbolp type)
-	   (setf size (si::size-of-foreign-elt-type type)))
+	   (setf size (si:size-of-foreign-elt-type type)
+                 align (si:alignment-of-foreign-elt-type type)))
 	  ((atom type)
 	   (error "~A is not a valid foreign type identifier" name))
 	  ((eq (setf name (first type)) :struct)
-	   (setf size (slot-position type nil))
-	   (setf align (apply #'max (mapcar #'(lambda (field)
+	   (setf size (slot-position type nil)
+                 align (apply #'max (mapcar #'(lambda (field)
 	                                        (multiple-value-bind (field-size field-align)
-						  (size-of-foreign-type (second field))
+                                                    (size-of-foreign-type (second field))
 						  field-align))
 	                                    (rest type))))
 	   (%align-data size align))
@@ -103,8 +104,8 @@
 	     (error "Incomplete foreign type: ~S" type))
 	   (multiple-value-bind (elt-size elt-align)
 	     (size-of-foreign-type (second type))
-	     (setf size (* size elt-size))
-	     (setf align elt-align)))
+	     (setf size (* size elt-size)
+                   align elt-align)))
 	  ((eq name :union)
 	   (dolist (field (rest type))
 	     (multiple-value-bind (field-size field-align)
@@ -114,14 +115,14 @@
 	       (when (or (null align) (> field-align align))
 	         (setf align field-align)))))
 	  ((eq name '*)
-	   (setf size (si::size-of-foreign-elt-type :pointer-void)))
+	   (setf size (si:size-of-foreign-elt-type :pointer-void)
+                 align (si:alignment-of-foreign-elt-type :pointer-void)))
           ((eq name 'quote)
-           (size-of-foreign-type (second type)))
+           (return-from size-of-foreign-type
+             (size-of-foreign-type (second type))))
 	  (t
 	   (error "~A does not denote a foreign type" name)))
-    (unless align
-      (setf align size))
-    (values size align)))
+    (values size (or align 0))))
 
 (defun allocate-foreign-object (type &optional (size 0 size-flag))
   (declare (fixnum size))
